fix flex-stretch when nested as an op-flex item

--- a/op-flex.css
+++ b/op-flex.css
@@ -75,6 +75,10 @@ SOFTWARE.
     width: 100%;
 }
 
+.op-flex .op-flex.flex-stretch {
+    width: auto;
+}
+
 
 /* general flex properties for items */
 .op-flex > .flex-base {
